--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "canvas-confetti": "^1.6.0"
   },
   "devDependencies": {
-    "semistandard": "^17.0.0"
-  },
-  "eslintConfig": {
-    "extends": "./node_modules/semistandard/eslintrc.json"
+    "eslint": "^8.45.0",
+    "eslint-config-semistandard": "^17.0.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^15.7.0",
+    "eslint-plugin-promise": "^6.1.1"
   }
 }
